--- a/part7-graph-feature-engineering-in-gds.ipynb
+++ b/part7-graph-feature-engineering-in-gds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4f33655",
+   "id": "b921f6a6",
    "metadata": {},
    "source": [
     "# Part 7: Feature Engineering in Neo4j and GDS\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d171ba65",
+   "id": "e0d3a4b2",
    "metadata": {},
    "source": [
     "## Connection Setup and Helper Functions"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ee1ddc4f",
+   "id": "a079f865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "294ddcfe",
+   "id": "68ec8667",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b1c534b",
+   "id": "69ca54e2",
    "metadata": {},
    "source": [
     "## Native Graph Projection with Properties\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "df64785d",
+   "id": "69254d36",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08145ec5",
+   "id": "c3e3832b",
    "metadata": {},
    "source": [
     "## Generating FastRP Features\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8b11e8a4",
+   "id": "de1bc605",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a38c0f19",
+   "id": "dfb0a1e6",
    "metadata": {},
    "source": [
     "## Subgraph Projection and Data Export\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2b1e43ea",
+   "id": "657e0cef",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "684343be",
+   "id": "c709cbd3",
    "metadata": {},
    "outputs": [
     {
@@ -215,8 +215,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "e54b64f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#remove graph projections to clean up\n",
+    "clear_graph(driver, 'proj-features-labeled')\n",
+    "clear_graph(driver, 'proj-features')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f870083c",
+   "id": "4850496b",
    "metadata": {},
    "outputs": [],
    "source": []
