Small Spelling and Sentence Corrections

--- a/part8-graph-feature-model.ipynb
+++ b/part8-graph-feature-model.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "path = '/data/neo-eport/export/proj-features-labeled/' \n",
+    "path = '/data/neo-export/export/proj-features-labeled/' \n",
     "all_files = glob.glob(path + \"nodes_Paper_[0-9]*.csv\")\n",
     "\n",
     "li = []\n",
@@ -746,7 +746,7 @@
    "id": "d82f4bc2",
    "metadata": {},
    "source": [
-    "#### Note: We were able to increase classification accuracy by about 9% from part 2 by substituting the FastRP graph features"
+    "#### Note: We were able to increase classification accuracy by about 9% points from part 2 by substituting the FastRP graph features"
    ]
   },
   {
